Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2757

logging crashes on reconfiguration

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 5.0.0
    • 5.0.0
    • Logging

    Description

      If you use TSTextLogObjectCreate in a plugin, when those log objects are deleted, the object manager crashes. It looks like _APIobjects has a stale pointer.

      (gdb) bt
      #0  0x00000000005e8c47 in LogObjectManager::~LogObjectManager (this=0x4bf0028, __in_chrg=<value optimized out>) at LogObject.cc:903
      #1  0x00000000005d33e2 in LogConfig::~LogConfig (this=0x4bf0000, __in_chrg=<value optimized out>) at LogConfig.cc:573
      #2  0x00000000005d3446 in LogConfig::~LogConfig (this=0x4bf0000, __in_chrg=<value optimized out>) at LogConfig.cc:573
      #3  0x0000000000617b8a in ConfigProcessor::release (this=0xafa720, id=5, info=0x4bf0000) at ProxyConfig.cc:210
      #4  0x0000000000618496 in ConfigInfoReleaser::handle_event (this=0x21c5a00) at ProxyConfig.cc:106
      #5  0x00000000004e5920 in Continuation::handleEvent (this=0x21c5a00, event=2, data=0xe926780) at ../iocore/eventsystem/I_Continuation.h:146
      #6  0x00000000006d17b6 in EThread::process_event (this=0x2e08000, e=0xe926780, calling_code=2) at UnixEThread.cc:145
      #7  0x00000000006d1ad1 in EThread::execute (this=0x2e08000) at UnixEThread.cc:224
      #8  0x00000000006d0da0 in spawn_thread_internal (a=0x21ddd60) at Thread.cc:88
      #9  0x00002b507e273851 in start_thread () from /lib64/libpthread.so.0
      

      Attachments

        Activity

          People

            jamespeach James Peach
            jamespeach James Peach
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: